# WaymoCOCO

./: .env.example  .gitignore  README.md  check_coco_annotation_and_videos.py  check_if_tensors_and_images_and_annotations_are_aligned.py  convert_waymo_to_coco.py  create_json_file_with_target_only.py  create_json_file_with_targets_and_mini.py  project_config.py  pyproject.toml
logs/export_val/: export_val_3038891.err
scripts/: export_train.sh  export_val.sh
waymo_open_dataset/: __init__.py
