[project]
name = "waymococo"
version = "0.1.0"
description = "Waymo Open Dataset to COCO format converter"
requires-python = ">=3.10"
dependencies = [
    "tensorflow",
    "torch",
    "torchvision",
    "tqdm",
    "einops",
    "pandas",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
